Union de los css

--- a/Entrega/index.html
+++ b/Entrega/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
 
     <!-- links Css -->
-    <!-- <link rel="stylesheet" href="css/estilos.css"> -->
-
-    <link rel="stylesheet" href="css/estilos-urbano.css">
+    <link rel="stylesheet" href="css/estilos.css">
+<!--     <link rel="stylesheet" href="css/estilos-retro.css"> -->
+<!--     <link rel="stylesheet" href="css/estilos-urbano.css"> -->
 
 
     <!-- Googlr fonts -->
@@ -65,7 +65,7 @@
 
                 <p>Sexo</p>
                 <div class="sexo">
-                    <br>
+
                     <label for="otro">Otro</label>
                     <input type="radio" id="otro" name="sexo" value="otro">
 
@@ -77,6 +77,7 @@
                 </div>
             </fieldset>
 
+            <hr class="puntitos">
 
             <fieldset class="contacto">
                 <legend>📱 Datos de Contacto 📩</legend>
@@ -92,6 +93,8 @@
                 </div>
 
             </fieldset>
+            
+            <hr class="puntitos">
 
             <fieldset class="actividades">
                 <legend>🚴 Actividades 🤸‍♂️</legend>
